Modificacion de clases
Se ha modificado ProgramaView,SubProgramaView y ProyectoView